--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.security.user.name=admin
 spring.security.user.password=nimda
+spring.creditcard.expiryDays=259200000
+spring.creditcard.defaultBalance=0
