--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
 					<finalName>publicis-sapient-spring-h2-demo</finalName>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+			</plugin>
+
 		</plugins>
 	</build>
 
