added card limit and changed uri api end points

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.security.user.name=admin
 spring.security.user.password=nimda
 spring.creditcard.expiryDays=259200000
 spring.creditcard.defaultBalance=0
+spring.creditcard.cardLimit=100000
